tests/ui/invalid_pymethod_names.stderr
error: name can not be specified for getter
  --> $DIR/invalid_pymethod_names.rs:10:7
   |
10 |     #[name = "num"]
   |       ^^^^

error: name can not be specified multiple times
  --> $DIR/invalid_pymethod_names.rs:18:7
   |
18 |     #[name = "bar"]
   |       ^^^^

error: name can not be specified with #[new]
  --> $DIR/invalid_pymethod_names.rs:24:7
   |
24 |     #[name = "makenew"]
   |       ^^^^

error: cannot find attribute `name` in this scope
  --> $DIR/invalid_pymethod_names.rs:17:7
   |
17 |     #[name = "foo"]
   |       ^^^^

error: cannot find attribute `name` in this scope
  --> $DIR/invalid_pymethod_names.rs:18:7
   |
18 |     #[name = "bar"]
   |       ^^^^
